<?xml version="1.0"?>
<package format="2">
  <name>livox2sensor</name>
  <version>0.0.0</version>
  <description>The livox2sensor package</description>

  <maintainer email="drone@todo.todo">drone</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>PCL</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <!--build_depend>message_generation</build_depend-->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>PCL</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <!--build_export_depend>message_runtime</build_export_depend-->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>PCL</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
